tests/sysy/valid/local_const_dimension.sy
int main() {
    const int N = 2;
    int a[N] = {1, 2};
    return a[1];
}
