tests/sysy/invalid/non_const_array_dimension.sy
int main() {
    int n = 2;
    int a[n];
    return 0;
}
